--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyosa"
+version = "0.0.1"
 authors = [{name = "Ante Kapetanović", email = "akape00@gmail.com"}]
 description = "Simple estimator of the irregular open surface area in 3-D"
 keywords = [
@@ -28,7 +29,6 @@ classifiers = [
 ]
 readme = "README.md"
 license = {file = "LICENSE"}
-dynamic = ["version"]
 requires-python = ">=3.7"
 dependencies = [
   "numpy >= 1.20.0",
